Move auto-setting 'fertig' to correct block.

--- a/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -3,8 +3,8 @@ log4j.logger.org.apache=WARN
 log4j.logger.org.openid4java=WARN
 log4j.logger.org.hibernate=ERROR
 log4j.appender.lada=org.apache.log4j.RollingFileAppender
-log4j.appender.lada.File=/var/log/wildfly/lada-server.log
-log4j.appender.lada.MaxFileSize=1MB
+log4j.appender.lada.File=/usr/src/lada-server/log/lada-server.log
+log4j.appender.lada.MaxFileSize=20MB
 log4j.appender.lada.MaxBackupIndex=5
 log4j.appender.lada.layout=org.apache.log4j.PatternLayout
-log4j.appender.lada.layout.ConversionPattern=%d %p %l: %m%n
+log4j.appender.lada.layout.ConversionPattern=%d{HH:mm:ss,sss}: %-5p %c{1} - %m%n
