--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>simple2</groupId>
   <artifactId>simple2</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   	<properties>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
