--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     <name>Performance Signature with Dynatrace</name>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Performance+Signature+with+Dynatrace+Plugin</url>
     <scm>
-        <connection>scm:git:https://github.com/jenkinsci/performance-signature-dynatrace-plugin.git</connection>
-        <developerConnection>scm:git:https://github.com/jenkinsci/performance-signature-dynatrace-plugin.git</developerConnection>
+        <connection>scm:git:git@github.com:jenkinsci/performance-signature-dynatrace-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/performance-signature-dynatrace-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/performance-signature-dynatrace-plugin</url>
         <tag>HEAD</tag>
     </scm>
