--- a/src/main/resources/de/tsystems/mms/apm/performancesignature/PerfSigMemoryDump/config.properties
+++ b/src/main/resources/de/tsystems/mms/apm/performancesignature/PerfSigMemoryDump/config.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-description=configured Dynatrace profile/server pair, configure dynatrace server <a href="{0}/configure" target=_new>here</a>
+description=configured Dynatrace profile/server pair, configure Dynatrace server <a href="{0}/configure" target=_new>here</a>
