--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
       <version>3.0.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.tukaani</groupId>
+      <artifactId>xz</artifactId>
+      <version>1.5</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
 
